--- a/.gitignore
+++ b/.gitignore
@@ -25,10 +25,13 @@ build/
 .idea/
 *.swp
 *.swo
+*.sublime-project
+*.sublime-workspace
 
 # OS
 .DS_Store
 Thumbs.db
+*.tmp
 
 # Logs
 *.log
@@ -37,3 +40,10 @@ Thumbs.db
 .pytest_cache/
 .coverage
 htmlcov/
+
+# Node.js / Frontend
+node_modules/
+frontend/dist/
+frontend/dist-ssr/
+frontend/.vite/
+*.local
